--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -24,6 +24,7 @@
 		<module>jsf2-portlet</module>
 		<module>jsf2-jsp-portlet</module>
 		<module>jsf2-spring-portlet</module>
+		<module>liferayfaces3-portlet</module>
 		<module>primefaces3-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
