FACES-2002 Develop portal:navBarSearch and portal:inputSearch

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -542,6 +542,12 @@ portal-inputrichtext-dom-events=A subset of *DOM events* are supported including
 portal-inputrichtext-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. Supported values for the [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute are `blur`, `focus`, and `valueChange` (the default).
 portal-inputrichtext-validation=The [vdldoc:portal:inputRichText:minPlainTextChars] and [vdldoc:portal:inputRichText:maxPlainTextChars] attributes control the *minimum/maximum number of plain text characters*, meaning characters that do not include HTML tags such as `&lt;strong&gt;`, `&lt;em&gt;`, and `&lt;a href="..."&gt;`.
 portal-inputrichtext-validation-example-1=Specifying `minPlainTextChars="10"` and `maxPlainTextChars="144"`
+portal-inputsearch=[javadoc:com.liferay.faces.portal.component.inputsearch.InputSearch] is a [javadoc:javax.faces.component.UIInput] component that renders a field for searching a text string.
+portal-inputsearch-general=The general usage is to send a text to search in a managed bean.
+portal-inputsearch-general-example-1=Responsive feature enabled for small/mobile displays
+portal-inputsearch-general-buttonlabel=Submit search
+portal-inputsearch-general-placeholder=Enter your search here
+portal-inputsearch-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. Supported values for the [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute are `blur`,`change`,`valueChange`,`click`,`dblclick`,`focus`,`keydown`,`keypress`,`keyup`,`mousedown`,`mousemove`,`mouseout`,`mouseover`,`mouseup`, `select` and `search` (the default).
 portal-nav=[javadoc:com.liferay.faces.portal.component.nav.Nav] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `&lt;ul&gt;...&lt;/ul&gt` (unordered) list. It is designed to be used in conjunction with [vdldoc:portal:navItem] child component tags.
 portal-nav-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:portal:navItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:portal:navItem:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 portal-nav-general=Child [vdldoc:portal:navItem] child component tags are rendered as `&lt;li&gt;...&lt;/li&gt;` (list item) elements.
