FACES-1760 Upgrade demo portlet to RichFaces 4.5.0.Final

--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -25,6 +25,7 @@
         <module>liferayfaces4-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
+		<module>richfaces4-portlet</module>
 	</modules>
 
 	<profiles>
