--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -22,6 +22,7 @@
 		<module>jsf2-portlet</module>
 		<module>jsf2-jsp-portlet</module>
 		<module>jsf2-spring-portlet</module>
+		<module>icefaces4-portlet</module>
         <module>liferayfaces4-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
