FACES-2038 Upgrade 3.x branch demos to mojarra 2.1.29

--- a/demos/bridge/icefaces3-portlet/pom.xml
+++ b/demos/bridge/icefaces3-portlet/pom.xml
@@ -10,6 +10,9 @@
 	<artifactId>icefaces3-portlet</artifactId>
 	<packaging>war</packaging>
 	<name>ICEfaces3 Portlet</name>
+	<properties>
+		<mojarra.version>${icefaces.mojarra.version}</mojarra.version>
+	</properties>
 
 	<profiles>
 		<profile>
