--- a/demos/bridge/icefaces3-compat-portlet/pom.xml
+++ b/demos/bridge/icefaces3-compat-portlet/pom.xml
@@ -10,6 +10,9 @@
 	<artifactId>icefaces3-compat-portlet</artifactId>
 	<name>ICEfaces3 Compat Portlet</name>
 	<packaging>war</packaging>
+	<properties>
+		<mojarra.version>${icefaces.mojarra.version}</mojarra.version>
+	</properties>
 
 	<profiles>
 		<profile>
