--- a/demos/portal/icefaces3-documents-portlet/pom.xml
+++ b/demos/portal/icefaces3-documents-portlet/pom.xml
@@ -10,6 +10,9 @@
 	<artifactId>icefaces3-documents-portlet</artifactId>
 	<packaging>war</packaging>
 	<name>ICEfaces3 Documents Portlet</name>
+	<properties>
+		<mojarra.version>${icefaces.mojarra.version}</mojarra.version>
+	</properties>
 
 	<dependencies>
 		<dependency>
