FACES-2038 Upgrade 3.x branch demos to mojarra 2.1.29

--- a/demos/bridge/icefaces3-compat-portlet/pom.xml
+++ b/demos/bridge/icefaces3-compat-portlet/pom.xml
@@ -8,8 +8,11 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>icefaces3-compat-portlet</artifactId>
-	<packaging>war</packaging>
 	<name>ICEfaces3 Compat Portlet</name>
+	<packaging>war</packaging>
+	<properties>
+		<mojarra.version>${icefaces.mojarra.version}</mojarra.version>
+	</properties>
 
 	<profiles>
 		<profile>
