--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 		<faces.version>${mojarra.version}</faces.version>
 		<full.version>${project.version} (${codename} / ${timestamp} AD)</full.version>
 		<icefaces3.version>3.3.0</icefaces3.version>
+		<icefaces.mojarra.version>${mojarra.version}</icefaces.mojarra.version>
 		<jstl.version>1.2</jstl.version>
 		<liferay.version>6.1.2</liferay.version>
 		<liferay.app.server.deploy.dir>${liferay.app.server.dir}/webapps</liferay.app.server.deploy.dir>
