--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -24,6 +24,7 @@
 		<module>jsf2-spring-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
+		<module>richfaces4-portlet</module>
 	</modules>
 
 	<profiles>
