FACES-1760 Upgrade demo portlet to RichFaces 4.5.0.Final

--- a/demos/bridge/richfaces4-portlet/pom.xml
+++ b/demos/bridge/richfaces4-portlet/pom.xml
@@ -63,12 +63,8 @@
 			<artifactId>portlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.richfaces.ui</groupId>
-			<artifactId>richfaces-components-ui</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.richfaces.core</groupId>
-			<artifactId>richfaces-core-impl</artifactId>
+			<groupId>org.richfaces</groupId>
+			<artifactId>richfaces</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
