--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-demos</artifactId>
-		<version>4.1.0-beta1-SNAPSHOT</version>
+		<version>4.2.0-beta1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-bridge-demos</artifactId>
@@ -22,6 +22,8 @@
 		<module>jsf2-portlet</module>
 		<module>jsf2-jsp-portlet</module>
 		<module>jsf2-spring-portlet</module>
+		<module>icefaces4-portlet</module>
+        <module>liferayfaces4-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
 		<module>richfaces4-portlet</module>
