FACES-1513 Portlet incompatibility with PrimeFaces p:dataExporter and p:fileDownload (also added p:dataExporter to primefaces demo portlets for testing)

--- a/demos/bridge/primefaces4-portlet/src/main/resources/i18n.properties
+++ b/demos/bridge/primefaces4-portlet/src/main/resources/i18n.properties
@@ -10,6 +10,7 @@ dear=Dear
 edit-preferences=Edit Preferences
 email-address=Email Address
 example-jsf-portlet-help=This portlet demonstrates how to use Liferay Faces Bridge with JSF 2.x.
+export-as-csv=Export as CSV
 file-name=File Name
 first-name=First Name
 hide=Hide
