FACES-2064 Add dropdown to select highlighter type in autoComplete and inputTime Highlighter examples

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -473,6 +473,7 @@ fieldset-legend=Fieldset Legend
 filter=Filter
 footer=Footer
 highlighter=Highlighter
+highlighter-type=Highlighter Type
 first-name=First Name
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
