FACES-2069 Rename alloy:importConstants to to alloy:loadConstants

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -110,11 +110,11 @@ alloy-image-general-example-1=Context-relative path to a resource via the [vdldo
 alloy-image-general-example-2=JSF resource via the `#{resource}` EL keyword
 alloy-image-general-example-3=JSF resource via the [vdldoc:alloy:image:library] and [vdldoc:alloy:image:name] attributes
 alloy-image-general-example-4=Clickable areas via the [vdldoc:alloy:image:usemap] attribute
-alloy-importconstants=[javadoc:com.liferay.faces.alloy.taghandler.ImportConstants] is a [javadoc:javax.faces.view.facelets.TagHandler] which can obtain constants from Java for use in EL.
-alloy-importconstants-general=Constants can be imported from `class`, `enum`, or `interface` types and are kept in a thread-safe, application-scoped cache unless [vdldoc:alloy:importConstants:cacheable]=`false`.
-alloy-importconstants-general-example-1=Importing from a Java class
-alloy-importconstants-general-example-2=Importing from a Java enum
-alloy-importconstants-general-example-3=Importing from a Java interface
+alloy-loadconstants=[javadoc:com.liferay.faces.alloy.taghandler.ImportConstants] is a [javadoc:javax.faces.view.facelets.TagHandler] which can obtain constants from Java for use in EL.
+alloy-loadconstants-general=Constants can be imported from `class`, `enum`, or `interface` types and are kept in a thread-safe, application-scoped cache unless [vdldoc:alloy:importConstants:cacheable]=`false`.
+alloy-loadconstants-general-example-1=Importing from a Java class
+alloy-loadconstants-general-example-2=Importing from a Java enum
+alloy-loadconstants-general-example-3=Importing from a Java interface
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input type="text"&gt;` element and a *calendar popover* with selectable dates. The component attempts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built-in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-date-pattern-example=Specifying `datePattern="EEEE, MMM dd, yyyy"`
