--- a/demos/bridge/icefaces4-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/demos/bridge/icefaces4-portlet/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,15 @@
 		<param-name>com.sun.faces.expressionFactory</param-name>
 		<param-value>org.jboss.el.ExpressionFactoryImpl</param-value>
 	</context-param>
-	<!-- Prevent all the ACE components from having their JavaScript and CSS resources loaded by default --> 
+	<!-- Instruct Mojarra to namespace parameters according to NamingContainer rules. -->
+	<!-- JAVASERVERFACES-3031 -->
+	<!--
+	<context-param>
+		<param-name>com.sun.faces.namespaceParameters</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	-->
+	<!-- Prevent all the ACE components from having their JavaScript and CSS resources loaded by default -->
 	<context-param>
 		<param-name>org.icefaces.mandatoryResourceConfiguration</param-name>
 		<param-value>none</param-value>
