--- a/demos/bridge/icefaces4-portlet/pom.xml
+++ b/demos/bridge/icefaces4-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-bridge-demos</artifactId>
-		<version>4.2.0-beta1-SNAPSHOT</version>
+		<version>4.2.0-m3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>icefaces4-portlet</artifactId>
