--- a/portal/generator.properties
+++ b/portal/generator.properties
@@ -14,7 +14,7 @@ builder.copyright.year=2014
 builder.faces.output.dir=src/main/java
 builder.faces.taglib.xml.namespace=portal
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
-builder.faces.version=4.2.0-beta1
+builder.faces.version=4.2.0-m3
 builder.faces.default.alloy.renderer.parent.class=javax.faces.render.Renderer
 builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
 
