--- a/test/integration/util/pom.xml
+++ b/test/integration/util/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.test</groupId>
 		<artifactId>liferay-faces-test-integration</artifactId>
-		<version>4.2.0-beta1-SNAPSHOT</version>
+		<version>4.2.0-m3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-test-integration-util</artifactId>
