--- a/issues/bridge/FACES-1618-portlet/pom.xml
+++ b/issues/bridge/FACES-1618-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.issues</groupId>
 		<artifactId>liferay-faces-bridge-issues</artifactId>
-		<version>4.1.0-beta1-SNAPSHOT</version>
+		<version>4.1.0-m3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>FACES-1618-portlet</artifactId>
