FACES-2039 portal:header and portal:buttonRow components and use cases

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -410,6 +410,8 @@ dynamic-tabs=Dynamic Tabs
 edit=Edit
 enable=Enable
 error=Error
+escapexml-is-false=escapeXml <i>is false</i>
+escapexml-is-true=escapeXml <i>is true by default</i>
 example=Example
 expand-all=Expand All
 f-ajax=The JSF runtime includes the [vdldoc:f:ajax] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
@@ -487,6 +489,7 @@ h-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an
 has-compatibility-issues-with-jsf-22-file-upload-for-more-information-see-this=has compatibility issues with JSF 2.2 file upload. For more information see this
 header=Header
 header-text=Header Text
+header-text-with-xml=Header Text <i>with xml</i>
 hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
@@ -533,6 +536,12 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+portal-buttonrow-general=Use [vdldoc:portal:buttonRow] to contain a row of buttons in Liferay.
+portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag.
+portal-header-general=There are a few options when using the [vdldoc:portal:header] tag ...
+portal-header-general-example-1=When [vdldoc:portal:header:escapeXml] is false, markup is not escaped.  This is true by default. 
+portal-header-general-example-2=The [vdldoc:portal:header:backURL] and [vdldoc:portal:header:backLabel] attributes can be used to create a link and its label, respectively.
 portal-inputrichtext=[javadoc:com.liferay.faces.portal.component.inputrichtext.InputRichText] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing rich text.
 portal-inputrichtext-general=The general usage is to support authoring of rich text as *fragments of HTML*.
 portal-inputrichtext-bbcode=Authoring of *BBCode* rich text is supported by specifying the [vdldoc:portal:inputRichText:editorKey] attribute with a Liferay Portal *property key* that has a value of `ckeditor_bbcode`.
