--- a/support/weblogic/pom.xml
+++ b/support/weblogic/pom.xml
@@ -13,6 +13,14 @@
 	<name>Liferay Faces Support WebLogic</name>
 
 	<profiles>
+		<!-- The release profile ensures that the version elements in the child pom.xml descriptors -->
+		<!-- will be auto-versioned by the maven-release-plugin. -->
+		<profile>
+			<id>release</id>
+			<modules>
+				<module>glassfish-jsf</module>
+			</modules>
+		</profile>
 		<profile>
 			<id>weblogic</id>
 			<modules>
@@ -20,17 +28,5 @@
 			</modules>
 		</profile>
 	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
