FACES-2062 Remove unnecessary configuration info and consoloidate redundant configuration info for generating components

--- a/util/generator.properties
+++ b/util/generator.properties
@@ -2,8 +2,7 @@
 ## General
 ##
 
-builder.authors=\
-		Neil Griffin
+builder.authors=${authors}
 builder.components.definitions=./components-ext.xml
 builder.copyright.year=2014
 
@@ -11,12 +10,10 @@ builder.copyright.year=2014
 ## Faces Builder
 ##
 
+
 builder.faces.output.dir=src/main/java
-builder.faces.taglib.xml.namespace=bridge
+builder.faces.taglib.xml.namespace=${namespace}
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
-builder.faces.version=3.1.5-ga6
-builder.faces.default.alloy.renderer.parent.class=javax.faces.render.Renderer
-builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
 
 # Attributes do not need to be namespaced because they are all manually chosen.
 builder.namespaced.attributes=
