FACES-2021 Prepare for OSGi by moving impl classes to internal sub-packages in order to clearly distinguish API from implementation (Generate bridge component API in bridge-api)

--- a/pom.xml
+++ b/pom.xml
@@ -891,6 +891,8 @@
 			<!-- Note: this profile can only be actived from the alloy/, bridge-impl/, or portal/ directories. -->
 			<properties>
 				<authors>Neil Griffin</authors>
+				<component.impl.output.dir>src/main/java</component.impl.output.dir>
+				<component.api.output.dir>${component.impl.output.dir}</component.api.output.dir>
 			</properties>
 			<build>
 				<plugins>
