--- a/util/generator.properties
+++ b/util/generator.properties
@@ -11,7 +11,8 @@ builder.copyright.year=2014
 ##
 
 
-builder.faces.output.dir=src/main/java
+builder.faces.api.output.dir=${component.api.output.dir}
+builder.faces.impl.output.dir=${component.impl.output.dir}
 builder.faces.taglib.xml.namespace=${namespace}
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 
