FACES-2021 Prepare for OSGi by moving impl classes to internal sub-packages in order to clearly distinguish API from implementation (Generate bridge component API in bridge-api)

--- a/bridge-impl/pom.xml
+++ b/bridge-impl/pom.xml
@@ -79,6 +79,7 @@
 			<id>generate-components</id>
 			<properties>
 				<namespace>bridge</namespace>
+				<component.api.output.dir>../bridge-api/${component.impl.output.dir}</component.api.output.dir>
 			</properties>
 		</profile>
 	</profiles>
