--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
 		<portlet.war.deployment.type>deploy</portlet.war.deployment.type>
 		<primefaces4.version>4.0</primefaces4.version>
 		<primefaces5.version>5.0</primefaces5.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.stage>Production</project.stage>
 		<richfaces4.version>4.5.0.Final</richfaces4.version>
 		<selenium.version>2.35.0</selenium.version>
