FACES-2124 Build system outputs warning "Using platform encoding"

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
 		<primefaces3.version>3.5</primefaces3.version>
 		<primefaces4.version>4.0</primefaces4.version>
 		<primefaces5.version>5.0</primefaces5.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.stage>Production</project.stage>
 		<richfaces4.version>4.5.0.Final</richfaces4.version>
 		<selenium.version>2.35.0</selenium.version>
