--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
 		<portlet.war.deployment.type>deploy</portlet.war.deployment.type>
 		<primefaces3.version>3.5</primefaces3.version>
 		<primefaces4.version>4.0</primefaces4.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.stage>Production</project.stage>
 		<richfaces4.version>4.5.0.Final</richfaces4.version>
 		<selenium.version>2.35.0</selenium.version>
