--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -516,6 +516,7 @@ model-value=Model Value
 more-info=More Info
 multimedia=Multimedia
 multiple=Multiple
+multiple-instances=Multiple Instances
 modules=Modules
 multiple-panes=Multiple Panes
 navigation=Navigation
@@ -564,10 +565,9 @@ portal-permissionsurl-rowlevel=Access the *Row-Level Model Resource Permissions*
 portal-permissionsurl-toplevel=Access the *Top-Level Model Resource Permissions* by specifying the Fully-Qualified Class Name (FQCN) of the ServiceBuilder model via the [vdldoc:portal:permissionsURL:modelResource] attribute and the `groupId` (the ID of the Liferay Portal Site) via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute.
 portal-permissionsurl-windowstate=The [vdldoc:portal:permissionsURL:windowState] attribute is used to control how the Liferay Portal Permissions UI should be displayed (typically in an `&lt;iframe&gt;` dialog). Valid values include: `maximized`, `pop_up`, and `exclusive`. The default value is `maximized`.
 portal-permissionsurl-windowstate-example-1=Specifying `windowState="pop_up"`
-portal-runtime=[javadoc:com.liferay.faces.portal.component.runtime.Runtime] is a [javadoc:javax.faces.component.UIPanel] component that renders the markup from a Liferay portlet.
-portal-runtime-general=The general usage is rendering a portlet by its name.
-portal-runtime-portlet-preferences=You can override the default preferences after the first rendering using some of the known JSF methods in conjunction with `defaultPreferences` attribute.
-portal-runtime-portlet-preferences-toggleBorder=Toggle portlet borders
+portal-runtime=[javadoc:com.liferay.faces.portal.component.runtime.Runtime] is a [javadoc:javax.faces.component.UIPanel] component that *embeds the markup of a different portlet* within the current portlet.
+portal-runtime-general=The general usage is to specify the embedded portlet by its name. The name of an out-of-the-box Liferay portlet can be determined by examining the `portlet-name` element of the portal's <a href="https://github.com/liferay/liferay-portal/blob/6.2.2-ga3/portal-web/docroot/WEB-INF/liferay-portlet.xml#L24" target="_blank">liferay-portlet.xml</a> descriptor.
+portal-runtime-multiple-instances=Multiple instances can be specified by appending `_INSTANCE_` and a unique suffix to the value of the [vdldoc:portal:runtime:portletName] attribute. The portlet must have `&lt;instanceable&gt;true&lt;/instanceable&gt;` in the liferay-portlet.xml descriptor in order to support multiple instances.
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
 portlet-namespace=[javadoc:com.liferay.faces.bridge.component.PortletNamespace] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get the portlet namespace.
