Gets rid of warnings re: test packaging and prevents some installs to local .m2

--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -185,5 +185,15 @@
 			</build>
 		</profile>
 	</profiles>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
