--- a/test/integration/demos/bridge/job-application-portlet/pom.xml
+++ b/test/integration/demos/bridge/job-application-portlet/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>test-job-application-portlet</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>job-application-portlet integration tests</name>
 
 	<build>
