--- a/test/integration/demos/bridge/jsf2-portlet/pom.xml
+++ b/test/integration/demos/bridge/jsf2-portlet/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>test-jsf2-portlet</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>jsf2-portlet integration tests</name>
 
 	<build>
