FACES-2131 3.1.x: Gets rid of warnings re: test packaging

--- a/test/integration/demos/bridge/icefaces3-crud-portlet/pom.xml
+++ b/test/integration/demos/bridge/icefaces3-crud-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-icefaces3-crud-portlet</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>icefaces3-crud-portlet integration tests</name>
 
 </project>
