FACES-2131 2.2.x: Gets rid of warnings re: test packaging

--- a/test/integration/demos/bridge/icefaces3-portlet/pom.xml
+++ b/test/integration/demos/bridge/icefaces3-portlet/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>test-icefaces3-portlet</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>icefaces3-portlet integration tests</name>
 
 </project>
