FACES-2134 AlloyUI CSS resources not available for demo portlets deployed under Pluto

--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -39,6 +39,11 @@
 					<groupId>log4j</groupId>
 					<artifactId>log4j</artifactId>
 				</dependency>
+				<dependency>
+					<groupId>com.liferay.faces</groupId>
+					<artifactId>liferay-faces-reslib</artifactId>
+					<version>${project.version}</version>
+				</dependency>
 			</dependencies>
 		</profile>
 	</profiles>
