FACES-2136 Develop liferay-faces:deploy goal for liferay-faces-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,19 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>com.liferay.faces.maven</groupId>
+					<artifactId>liferay-faces-maven-plugin</artifactId>
+					<version>${project.version}</version>
+					<configuration>
+						<!-- liferay.auto.deploy.dir is the location where WARs are copied for deployment -->
+						<autoDeployDir>${liferay.auto.deploy.dir}</autoDeployDir>
+						<!-- liferay.deploy.dir is the location where extracted WARs are finally deployed -->
+						<deployDir>${liferay.deploy.dir}</deployDir>
+						<liferayVersion>${liferay.maven.plugin.version}</liferayVersion>
+						<pluginType>portlet</pluginType>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>com.liferay.maven.plugins</groupId>
 					<artifactId>liferay-maven-plugin</artifactId>
 					<version>${liferay.maven.plugin.version}</version>
