FACES-2131: Gets rid of more warnings re: test packaging

--- a/test/integration/issues/portal/FACES-1439-portlet/pom.xml
+++ b/test/integration/issues/portal/FACES-1439-portlet/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 
 	<artifactId>test-FACES-1439-portlet</artifactId>
+	<packaging>pom</packaging>
 	<name>FACES-1439 integration tests</name>
 
 </project>
