FACES-2131: Gets rid of even more warnings re: test packaging

--- a/test/integration/demos/bridge/liferayfaces3-portlet/pom.xml
+++ b/test/integration/demos/bridge/liferayfaces3-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-liferayfaces3-portlet</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>liferayfaces3-portlet integration tests</name>
 
 	<build>
