FACES-2131: packaging type jar for testers, but skipIfEmpty

--- a/test/integration/demos/bridge/icefaces4-portlet/pom.xml
+++ b/test/integration/demos/bridge/icefaces4-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-icefaces4-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>icefaces4-portlet integration tests</name>
 
 </project>
