--- a/test/integration/demos/bridge/jsf2-events/pom.xml
+++ b/test/integration/demos/bridge/jsf2-events/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-jsf2-events</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>jsf2-events integration tests</name>
 
 </project>
