--- a/test/integration/demos/bridge/jsf2-ipc-pub-render-params-portlet/pom.xml
+++ b/test/integration/demos/bridge/jsf2-ipc-pub-render-params-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-jsf2-ipc-pub-render-params-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>jsf2-ipc-pub-render-params-portlet integration tests</name>
 
 </project>
