--- a/test/integration/demos/bridge/jsf2-jsp-portlet/pom.xml
+++ b/test/integration/demos/bridge/jsf2-jsp-portlet/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 	
 	<artifactId>test-jsf2-jsp-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>jsf2-jsp-portlet integration tests</name>
 	
 </project>
