--- a/test/integration/issues/bridge/FACES-1470-portlet/pom.xml
+++ b/test/integration/issues/bridge/FACES-1470-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-FACES-1470-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>FACES-1470-portlet integration tests</name>
 
 </project>
