--- a/test/integration/issues/bridge/FACES-1635-resources/pom.xml
+++ b/test/integration/issues/bridge/FACES-1635-resources/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-FACES-1635-resources</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>FACES-1635 resources integration tests</name>
 	
 	<dependencies>
