--- a/test/integration/issues/portal/FACES-1427-portlet/pom.xml
+++ b/test/integration/issues/portal/FACES-1427-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-FACES-1427-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>FACES-1427 integration tests</name>
 
 </project>
