FACES-2131: packaging type jar for testers, but skipIfEmpty

--- a/test/integration/demos/pom.xml
+++ b/test/integration/demos/pom.xml
@@ -25,5 +25,17 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<skipIfEmpty>true</skipIfEmpty>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
