--- a/test/integration/demos/bridge/icefaces3-portlet/pom.xml
+++ b/test/integration/demos/bridge/icefaces3-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-icefaces3-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>icefaces3-portlet integration tests</name>
 
 </project>
