--- a/test/integration/demos/portal/icefaces3-directory-portlet/pom.xml
+++ b/test/integration/demos/portal/icefaces3-directory-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-icefaces3-directory-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>icefaces3-directory-portlet integration tests</name>
 
 </project>
