--- a/test/integration/demos/portal/primefaces3-users-portlet/pom.xml
+++ b/test/integration/demos/portal/primefaces3-users-portlet/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<artifactId>test-primefaces3-users-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>primefaces3-users-portlet integration tests</name>
 
 </project>
