--- a/test/integration/demos/bridge/jsf2-cdi-portlet/pom.xml
+++ b/test/integration/demos/bridge/jsf2-cdi-portlet/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>test-jsf2-cdi-portlet</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<name>jsf2-cdi-portlet integration tests</name>
 
 </project>
