FACES-2131: show-webapp needs to be installed in local .m2/repository since it is used by showcase-portlet as a warpath dependency

--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -26,6 +26,14 @@
 	</profiles>
 
 	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
