FACES-2145: skipIfEmpty, buy only skip install in demos and issues

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -28,9 +28,10 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
-					<skip>true</skip>
+					<skipIfEmpty>true</skipIfEmpty>
 				</configuration>
 			</plugin>
 		</plugins>
