--- a/test/bridge-tck/bridge-tck-compat/pom.xml
+++ b/test/bridge-tck/bridge-tck-compat/pom.xml
@@ -23,4 +23,15 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
