FACES-2029 Develop new liferayfaces4-portlet demo (updates to alloy:dialog enhancement and ajaxified file upload) FACES-2029 Develop new liferayfaces4-portlet demo (added alloy:dialog) FACES-2031 Test failure in liferayfaces4-portlet Selenium test

--- a/demos/bridge/primefaces3-portlet/src/main/resources/i18n.properties
+++ b/demos/bridge/primefaces3-portlet/src/main/resources/i18n.properties
@@ -5,6 +5,7 @@ attachments=Attachments
 birthday=Date of Birth
 city=City
 comments=Comments
+confirm=Confirm
 date-format=Date Format
 dear=Dear
 edit-preferences=Edit Preferences
