--- a/test/bridge-tck/bridge-tck-response-wrapper-portlet/pom.xml
+++ b/test/bridge-tck/bridge-tck-response-wrapper-portlet/pom.xml
@@ -99,7 +99,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.appfuse</groupId>
+				<groupId>org.appfuse.plugins</groupId>
 				<artifactId>maven-warpath-plugin</artifactId>
 				<extensions>true</extensions>
 				<executions>
@@ -111,35 +111,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.appfuse</groupId>
-										<artifactId>maven-warpath-plugin</artifactId>
-										<versionRange>[2.0.2,)</versionRange>
-										<goals>
-											<goal>add-classes</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 </project>
