FACES-2072 Add example validators for inputDate and inputTime showcase examples FACES-2131: Gets rid of warnings re: test packaging and prevents some installs to local .m2

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -505,7 +505,7 @@ link=Link
 link-to-a-map-of=Link to a map of
 locale-from-el=locale from EL
 localization=Localization
-lunchtime-is-not-valid=Lunchtime is not valid.
+lunchtime-is-not-valid=Lunchtime is not valid
 max-length-events=Max Length Events
 menu=Menu
 message-styling=Message Styling
@@ -536,7 +536,7 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
-please-choose-a-meeting-time-lunchtime-12-1-is-not-valid=Please choose a meeting time. Lunchtime (12-1) is not valid.
+please-choose-a-meeting-time-lunchtime-12-1-is-not-valid=Please choose a meeting time (Lunchtime from 12pm-1pm is not valid)
 portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 portal-buttonrow-general=Buttons are arranged in a row by specifying [vdldoc:alloy:button] child tags.
 portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -596,13 +596,13 @@ purchases=Purchases
 rating=Rating
 redisplay=Redisplay
 rendered=Rendered
-request-a-day-off-weekdays-only=Request a day off (weekdays only).
+request-a-day-off-weekdays-only=Request a day off (weekdays only)
 required=Required
 required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
 rowlevel=Row-Level
-sat-and-sun-are-not-valid=Saturday and Sunday are not valid.
+sat-and-sun-are-not-valid=Saturday and Sunday are not valid
 search=Search
 select=Select
 selection=Selection
